vlib/v/checker/tests/slice_reassignment.vv
fn main() {
	mut arr := [1, 2, 3, 4, 5]
	arr[..2] = [0, 0]
	println(arr)
}
